# repo-sherpa

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  INTEGRATION_TEST_REPORT.md  LICENSE  Makefile  README.md  bot_config.yaml.example  pyproject.toml  test_integration.py
docs/: README.md  architecture.md  setup.md
docs/plans/: initial_plan.md  update_session_ids.md
repos/: CLAUDE.md  REPOS.md.example
src/: bot.py  main.py
src/claude/: __init__.py  cli_wrapper.py  prompt_builder.py
src/sessions/: __init__.py  manager.py
src/slack/: __init__.py  app_manager.py  messaging.py
tests/: __init__.py
tests/claude/: test_cli_wrapper.py  test_prompt_builder.py
tests/sessions/: test_manager.py
tests/slack/: __init__.py  test_app_manager.py  test_messaging.py
